--- a/CuisineConnect.html
+++ b/CuisineConnect.html
@@ -40,6 +40,12 @@
             </form>
         </div>
     </nav>
+    
+  <div class="hero-text">
+    <h1 style="font-size:50px">WELCOME TO CUISINE CONNECT!</h1>
+    <p>Get ready to explore the world through food.</p>
+    <button>Explore</button>
+  </div>
 
     <footer class="navbar justify-content-evenly bg-info fixed-bottom">
         <div class="container py-3">
