dynamic header navbar finished.
work still needs to be done on footer navbar.

--- a/main.html
+++ b/main.html
@@ -42,15 +42,7 @@
     <!-- Your HTML Layout go here -->
     <!------------------------------>
     <!-- Stuff for body goes here -->
-    <nav class="navbar navbar-light bg-info">
-        <div class="container-fluid">
-            <a class="navbar-brand">Cuisine Connect</a>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success btn-info" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
+    <nav id="navbarPlaceholder"></nav>
 
     <div class="hero-text">
         <h1 style="font-size:50px">WELCOME TO CUISINE CONNECT!</h1>
@@ -58,20 +50,16 @@
         <button>Explore</button>
     </div>
 
-    <footer class="navbar justify-content-evenly bg-info fixed-bottom">
-        <div class="container py-3">
-            <span class="material-icons">favorite</span>
-            <span class="material-icons">home</span>
-            <span class="material-icons">map</span>
-        </div>
-    </footer>
+    <nav id="footerPlaceholder"></nav>
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
 
     <!-- Link to scripts of your own -->
     <script src="./scripts/firebaseAPI_BBY01.js"></script>
-    <!-- <script src="./scripts/script.js"></script> -->
+    <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/main.js"></script>
 
 </body>
 
