--- a/eachHike.html
+++ b/eachHike.html
@@ -44,10 +44,10 @@
     <!-- Stuff for body goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <div class="hero-text">
-        <h1 style="font-size:50px">WELCOME TO CUISINE CONNECT, <span id="name-goes-here">friend</span>!</h1>
-        <p>Get ready to explore the world through food.</p>
-        <button>Explore</button>
+    <div class="container">
+        <h1><span id="hikeName"> this hike</span></h1>
+        <img class="hike-img responsive" src="" />
+        <div id="details-go-here"></div>
     </div>
 
     <nav id="footerPlaceholder"></nav>
@@ -60,6 +60,7 @@
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/main.js"></script>
+    <script src="./scripts/eachHike.js"></script>
 
 </body>
 
