--- a/test.html
+++ b/test.html
@@ -44,13 +44,42 @@
     <!-- Stuff for body goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <div class="hero-text">
-        <h1 style="font-size:50px">WELCOME TO CUISINE CONNECT, <span id="name-goes-here">friend</span>!</h1>
-        <p>Get ready to explore the world through food.</p>
-        <button>Explore</button>
+    <div class="container-fluid bg-light text-dark p-5">
+        <div class="container bg-light p-5">
+            <h3>You've logged in!</h3>
+            <h1 class="display-4">Good morning, <span id="name-goes-here">friend</span></h1>
+            <hr>
+        </div>
+    </div>
+
+    <div class="container">
+        <h1>Some popular hikes</h1>
+        <!-- Here is the container for cards  -->
+        <div class="container">
+            <div id="hikes-go-here" class="row row-cols-auto">
+            </div>
+        </div>
     </div>
 
     <nav id="footerPlaceholder"></nav>
+
+    <!-- Templates for general use, not displayed -->
+    <template id="hikeCardTemplate">
+        <div class="card py-2 mx-2" style="width: 18rem">
+            <img class="card-image card-img-top" src=" ..." alt="..." />
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-length">placeholder</p>
+                <br />
+                <p class="card-text">
+                    Some quick example text to build on the card title and make up the
+                    bulk of the card's content.
+                </p>
+                <a class="btn btn-primary card-href">Read more ...</a>
+            </div>
+        </div>
+    </template>
+    
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
