--- a/thanks.html
+++ b/thanks.html
@@ -44,40 +44,15 @@
     <!-- Stuff for body goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <div class="container">
-        <h1><span id="hikeName"> this hike</span></h1>
-        <img class="hike-img responsive" src="" />
-        <div id="details-go-here"></div>
-    </div>
-    
-    <div class="container">
-        <h2>Reviews:</h2>
-        <div id="details-go-here"></div>
-        <!-- Here is the container for cards with horizontal scrolling -->
-        <div class="card-container">
-            <div id="reviewCardGroup" class="row row-cols-auto">
-                <!-- Add your card templates here -->
-            </div>
+    <div class="card text-center">
+        <div class="card-header">
+            Review received successfully!
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Thanks for submitting your review!</h5>
+            <a href="main.html" class="btn btn-primary">See More Hikes</a>
         </div>
     </div>
-
-    <template id="reviewCardTemplate">
-        <div class="card bg-secondary">
-            <img class="card-img-top">
-            <div class="card-body bg-light">
-                <h5 class="title">placeholder</h5>
-                <p class="star-rating"></p>
-                <p class="time">placeholder</p>
-                <p class="level">placeholder</p>
-                <p class="season">placeholder</p>
-                <p class="scrambled">placeholder</p>
-                <p class="flooded">placeholder</p>
-                <br>
-                <p class="description">This card has supporting text below as a natural lead-in to additional content.
-                </p>
-            </div>
-        </div>
-    </template>
 
     <nav id="footerPlaceholder"></nav>
     <!---------------------------------------------->
@@ -89,7 +64,6 @@
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/main.js"></script>
-    <script src="./scripts/eachHike.js"></script>
 
 </body>
 
