--- a/text/footer.html
+++ b/text/footer.html
@@ -1,7 +1,14 @@
 <nav class="navbar justify-content-evenly bg-info fixed-bottom">
     <div class="container py-3">
-        <span class="material-icons">favorite</span>
-        <span class="material-icons">home</span>
-        <span class="material-icons">map</span>
+        <!-- Wrap each icon in an anchor tag to make them clickable -->
+        <a href="favorites.html">
+            <span class="material-icons">favorite</span>
+        </a>
+        <a href="main.html">
+            <span class="material-icons">home</span>
+        </a>
+        <a href="map.html">
+            <span class="material-icons">map</span>
+        </a>
     </div>
 </nav>
