added button functions to footer icons

--- a/favourites.html
+++ b/favourites.html
@@ -44,10 +44,21 @@
     <!-- Stuff for body goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <div class="hero-text">
-        <h1 style="font-size:50px">WELCOME TO CUISINE CONNECT, <span id="name-goes-here">friend</span>!</h1>
-        <p>Get ready to explore the world through food.</p>
-        <button>Explore</button>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Your Favorite Dishes</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/drink1.jpg" class="card-img-top" alt="Food Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Dish name</h5>
+                        <p class="card-text">A short description of the dish.</p>
+                        <a href="#" class="btn btn-primary">Unfavourite</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Add more cards for other saved dishes here -->
+        </div>
     </div>
 
     <nav id="footerPlaceholder"></nav>
