Changed basically everything that had to do with hikes to meals
The database is now formatted to how we're going to use it

--- a/eachMeal.html
+++ b/eachMeal.html
@@ -45,11 +45,11 @@
     <nav id="navbarPlaceholder"></nav>
 
     <div class="container">
-        <h1><span id="hikeName">this hike</span></h1>
+        <h1><span id="mealName">this meal</span></h1>
         <div class="position-relative">
-            <img class="hike-img responsive" src="" alt="Hike photo">
+            <img class="meal-img responsive" src="" alt="Meal photo">
             <button class="btn btn-primary position-absolute bottom-0 end-0 m-3"
-                onclick="saveHikeDocumentIDAndRedirect()">Write Review</button>
+                onclick="saveMealDocumentIDAndRedirect()">Write Review</button>
         </div>
     </div>
 
@@ -71,10 +71,6 @@
                 <h5 class="title">placeholder</h5>
                 <p class="star-rating"></p>
                 <p class="time">placeholder</p>
-                <p class="level">placeholder</p>
-                <p class="season">placeholder</p>
-                <p class="scrambled">placeholder</p>
-                <p class="flooded">placeholder</p>
                 <br>
                 <p class="description">This card has supporting text below as a natural lead-in to additional content.
                 </p>
@@ -92,7 +88,7 @@
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/main.js"></script>
-    <script src="./scripts/eachHike.js"></script>
+    <script src="./scripts/eachMeal.js"></script>
 
 </body>
 
