--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
     <nav id="navbarPlaceholder"></nav>
 
     <div class="hero-text">
-        <h1 style="font-size:50px">WELCOME TO CUISINE CONNECT, <span id="name-goes-here">friend</span>!</h1>
+        <h1 style="font-size:50px">WELCOME TO CUISINE CONNECT, <span id="name-goes-here">NAME</span>!</h1>
         <p>Get ready to explore the world through food.</p>
         <button>Explore</button>
     </div>
