--- a/test.html
+++ b/test.html
@@ -53,10 +53,10 @@
     </div>
 
     <div class="container">
-        <h1>Some popular hikes</h1>
+        <h1>Some popular meals</h1>
         <!-- Here is the container for cards  -->
         <div class="container">
-            <div id="hikes-go-here" class="row row-cols-auto">
+            <div id="meals-go-here" class="row row-cols-auto">
             </div>
         </div>
     </div>
@@ -64,12 +64,11 @@
     <nav id="footerPlaceholder"></nav>
 
     <!-- Templates for general use, not displayed -->
-    <template id="hikeCardTemplate">
+    <template id="mealCardTemplate">
         <div class="card py-2 mx-2" style="width: 18rem">
             <img class="card-image card-img-top" src=" ..." alt="..." />
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-length">placeholder</p>
                 <br />
                 <p class="card-text">
                     Some quick example text to build on the card title and make up the
