--- a/text/footer.html
+++ b/text/footer.html
@@ -1,7 +1,7 @@
 <nav class="navbar justify-content-evenly bg-info fixed-bottom">
     <div class="container py-3">
-        <a href="favourites.html">
-            <span class="material-icons">favorite</span>
+        <a href="saved.html">
+            <span class="material-icons">saved</span>
         </a>
         <a href="homepage.html">
             <span class="material-icons">home</span>
