--- a/test.html
+++ b/test.html
@@ -74,6 +74,7 @@
                     Some quick example text to build on the card title and make up the
                     bulk of the card's content.
                 </p>
+                <i class="material-icons">bookmark_border</i>
                 <a class="btn btn-primary card-href">Read more ...</a>
             </div>
         </div>
