added more dishes

--- a/homepage.html
+++ b/homepage.html
@@ -58,6 +58,26 @@
                 </div>
             </div>
             <!-- Add more cards for other recommended dishes here -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/drink1.jpg" class="card-img-top" alt="Recommended Food Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Dish name</h5>
+                        <p class="card-text">A short description of the dish.</p>
+                        <a href="#" class="btn btn-primary">Favourite</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="images/drink1.jpg" class="card-img-top" alt="Recommended Food Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Dish name</h5>
+                        <p class="card-text">A short description of the dish.</p>
+                        <a href="#" class="btn btn-primary">Favourite</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
