photo to map function

--- a/homepage.html
+++ b/homepage.html
@@ -49,7 +49,8 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/drink1.jpg" class="card-img-top" alt="Recommended Food Image">
+                    <img src="images/drink1.jpg" class="card-img-top" alt="Recommended Food Image" 
+                    onclick="saveLocationAndRedirect(49.2827, -123.1207)">               
                     <div class="card-body">
                         <h5 class="card-title">Dish name</h5>
                         <p class="card-text">A short description of the dish.</p>
