minor changes - fixed overflow in review cards - changed navbar_after_login.html to redirect to homepage.html when clicked

--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-info">
     <div class="container-fluid">
-        <a class="navbar-brand">Cuisine Connect</a>
+        <a class="navbar-brand" href="homepage.html">Cuisine Connect</a>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success btn-info" type="submit">Search</button>
