--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
         <div class="rounded-circle overflow-hidden">
             <img class="responsive" src="./images/logo.jpg" alt="">
         </div>
-        <h1 style="font-size:50px"></h1>
-        <h1>WELCOME TO CUISINE CONNECT!</h1>
-        <p>Get ready to explore the world through food.</p>
+        <h1 style="font-size:50px">WELCOME TO CUISINE CONNECT!</h1>
+        <p>Get ready to explore the world through food!</p>
         <a href="login.html" class="btn btn-outline-success btn-info" role="button">Log in</a>
     </div>
 
