few features added and refactor
- renamed saved.html to profile.html
- added profile customization functionality
- updated most of the front-end to make it look better (button changes and overflow fixes)

--- a/eachMeal.html
+++ b/eachMeal.html
@@ -48,12 +48,12 @@
         <h1><span id="mealName">this meal</span></h1>
         <div class="position-relative">
             <img class="meal-img responsive" src="" alt="Meal photo">
-            <button class="btn btn-primary position-absolute bottom-0 end-0 m-3"
+            <button class="btn btn-secondary card-href position-absolute bottom-0 end-0 m-3"
                 onclick="saveMealDocumentIDAndRedirect()">Write Review</button>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container pb-5">
         <h2>Reviews:</h2>
         <div id="details-go-here"></div>
         <!-- Here is the container for cards with horizontal scrolling -->
