--- a/homepage.html
+++ b/homepage.html
@@ -49,13 +49,15 @@
             <h3>You've logged in!</h3>
             <h1 class="display-4">Good morning, <span id="name-goes-here">friend</span></h1>
             <hr>
+            <h2>Welcome to Cusine Connect!</h2>
+            <p>Get ready to explore the world through food.</p>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container pt-5">
         <h1>Some popular meals</h1>
         <!-- Here is the container for cards  -->
-        <div class="container">
+        <div class="container pb-5">
             <div id="meals-go-here" class="row row-cols-auto">
             </div>
         </div>
@@ -75,7 +77,7 @@
                     bulk of the card's content.
                 </p>
                 <i class="material-icons">bookmark_border</i>
-                <a class="btn btn-primary card-href">Read more ...</a>
+                <a class="btn btn-secondary card-href">Read more</a>
             </div>
         </div>
     </template>
