--- a/review.html
+++ b/review.html
@@ -69,7 +69,7 @@
                 <br>
                 <br>
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-lg btn-primary pull-right"
+                    <button type="button" class="btn btn-secondary card-href pull-right"
                         onclick="writeReview()">Submit</button>
                 </div>
             </div>
