--- a/text/footer_after_login.html
+++ b/text/footer_after_login.html
@@ -1,7 +1,7 @@
-<nav class="navbar justify-content-evenly bg-info fixed-bottom">
+<nav class="navbar pb-0 justify-content-evenly bg-info fixed-bottom">
     <div class="container py-3">
-        <a href="saved.html">
-            <span class="material-icons">saved</span>
+        <a href="profile.html">
+            <span class="material-icons">person</span>
         </a>
         <a href="homepage.html">
             <span class="material-icons">home</span>
