--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -3,7 +3,7 @@
         <a class="navbar-brand" href="homepage.html">Cuisine Connect</a>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success btn-info" type="submit">Search</button>
+            <button class="btn btn-info" type="submit">Search</button>
         </form>
     </div>
 </nav>
