minor changes - updated some visuals

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <h1 style="font-size:50px">WELCOME TO CUISINE CONNECT!</h1>
         <p>Get ready to explore the world through food!</p>
-        <a href="login.html" class="btn btn-outline-success btn-info" role="button">Log in</a>
+        <a href="login.html" class="btn btn-secondary card-href" role="button">Log in</a>
     </div>
 
     <nav id="footerPlaceholder"></nav>
