--- a/eachMeal.html
+++ b/eachMeal.html
@@ -44,7 +44,7 @@
     <!-- Stuff for body goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <div class="container">
+    <div class="container pt-5">
         <h1><span id="mealName">this meal</span></h1>
         <div class="position-relative">
             <img class="meal-img responsive" src="" alt="Meal photo">
