--- a/thanks.html
+++ b/thanks.html
@@ -50,7 +50,7 @@
         </div>
         <div class="card-body">
             <h5 class="card-title">Thanks for submitting your review!</h5>
-            <a href="main.html" class="btn btn-primary">See More Meals</a>
+            <a href="main.html" class="btn btn-secondary card-href">See More Meals</a>
         </div>
     </div>
 
