bug fixes and QoL

--- a/eachMeal.html
+++ b/eachMeal.html
@@ -65,9 +65,8 @@
     </div>
 
     <template id="reviewCardTemplate">
-        <div class="card bg-secondary">
-            <img class="card-img-top">
-            <div class="card-body bg-light">
+        <div class="card">
+            <div class="card-body">
                 <h5 class="title">placeholder</h5>
                 <p class="star-rating"></p>
                 <p class="time">placeholder</p>
