--- a/profile.html
+++ b/profile.html
@@ -67,6 +67,9 @@
                 <button type="button" class="btn btn-info" onclick="saveUserInfo()">Save</button>
             </div>
         </form>
+        <div class="d-flex pb-5">
+            <a class="btn btn-danger" href="./index.html">Logout</a>
+        </div>
     </div>
 
     <div class="container">
@@ -77,6 +80,8 @@
             </div>
         </div>
     </div>
+
+    
 
     <!-- Templates for general use, not displayed -->
     <template id="savedCardTemplate">
