--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
     <!-- Stuff for body goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <div class="container pt-5">
+    <div class="container pt-5 text-center">
         <h1>Let's Login!</h1>
     </div>
     <div id="firebaseui-auth-container"></div>
