food images can now be clicked on after read more to to send you to bcit map location

--- a/eachMeal.html
+++ b/eachMeal.html
@@ -47,7 +47,8 @@
     <div class="container pt-5">
         <h1><span id="mealName">this meal</span></h1>
         <div class="position-relative">
-            <img class="meal-img responsive" src="" alt="Meal photo">
+            <img class="meal-img responsive meal-img" src="" alt="Meal photo">
+
             <button class="btn btn-secondary card-href position-absolute bottom-0 end-0 m-3"
                 onclick="saveMealDocumentIDAndRedirect()">Write Review</button>
         </div>
