--- a/homepage.html
+++ b/homepage.html
@@ -68,7 +68,7 @@
     <!-- Templates for general use, not displayed -->
     <template id="mealCardTemplate">
         <div class="card py-2 mx-2" style="width: 18rem">
-            <img class="card-image card-img-top" src=" ..." alt="..." />
+            <img class="card-image card-img-top meal-img" src=" ..." alt="..." />
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <br />
