moved logout button location to top navbar

--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,9 +1,8 @@
 <nav class="navbar navbar-light bg-info">
     <div class="container-fluid">
         <a class="navbar-brand" href="homepage.html">Cuisine Connect</a>
-        <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-info" type="submit">Search</button>
-        </form>
+        <div class="d-flex">
+            <a class="btn btn-info" href="./index.html">Logout</a>
+        </div>
     </div>
 </nav>
