fixed centering issues on eachMeal and homepage

--- a/eachMeal.html
+++ b/eachMeal.html
@@ -55,11 +55,11 @@
     </div>
 
     <div class="container pb-5">
-        <h2>Reviews:</h2>
+        <h2 class="d-flex justify-content-center">Reviews:</h2>
         <div id="details-go-here"></div>
         <!-- Here is the container for cards with horizontal scrolling -->
         <div class="card-container">
-            <div id="reviewCardGroup" class="row row-cols-auto">
+            <div id="reviewCardGroup" class="row d-flex justify-content-center row-cols-auto">
                 <!-- Add your card templates here -->
             </div>
         </div>
