--- a/homepage.html
+++ b/homepage.html
@@ -55,9 +55,9 @@
     </div>
 
     <div class="container pt-5">
-        <h1>Some popular meals</h1>
+        <h1 class="d-flex justify-content-center">Some popular meals</h1>
         <!-- Here is the container for cards  -->
-        <div class="container pb-5">
+        <div class="container d-flex justify-content-center pb-5">
             <div id="meals-go-here" class="row row-cols-auto">
             </div>
         </div>
